--- a/.github/workflows/nusantaracoin.yml
+++ b/.github/workflows/nusantaracoin.yml
@@ -22,4 +22,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run Python Script
-        run: python nusantaracoin.py
+        run: python python.py
